--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "^16.9.10",
     "@types/react-router": "^5.1.11",
     "@types/react-router-dom": "^5.1.7",
+    "axios": "^0.26.0",
     "ionicons": "^5.4.0",
     "proskomma-react-hooks": "^1.4.1",
     "react": "^17.0.1",
