--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "@types/react-router": "^5.1.11",
     "@types/react-router-dom": "^5.1.7",
     "axios": "^0.26.0",
+    "buffer": "^6.0.3",
     "ionicons": "^5.4.0",
-    "proskomma-react-hooks": "^1.4.2",
+    "proskomma-freeze": "^0.6.0",
+    "proskomma-react-hooks": "^1.7.7",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-json-view": "^1.21.3",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "web-vitals": "^0.2.4",
