--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-json-view": "^1.21.3",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
+    "use-deep-compare": "^1.1.0",
     "web-vitals": "^0.2.4",
     "workbox-background-sync": "^5.1.4",
     "workbox-broadcast-update": "^5.1.4",
