--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "ionicons": "^5.4.0",
     "proskomma-freeze": "^0.6.0",
     "proskomma-react-hooks": "^1.7.7",
+    "proskomma-render": "^0.5.7",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-json-view": "^1.21.3",
