--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.26.0",
     "buffer": "^6.0.3",
     "ionicons": "^5.4.0",
+    "pagedjs": "^0.2.0",
     "proskomma-freeze": "^0.6.0",
     "proskomma-react-hooks": "^1.8.1",
     "proskomma-render": "^0.5.7",
