--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "proskomma-frozen-archives": "0.0.3",
     "proskomma-react-hooks": "^1.11.1",
     "proskomma-render": "^0.6.0",
+    "proskomma-render-pdf": "^0.6.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-json-view": "^1.21.3",
